--- a/styles/ShowCase.module.css
+++ b/styles/ShowCase.module.css
@@ -1,7 +1,7 @@
 .showcase {
     height: 300px;
     width: 100%;
-    background: #000 url('/images/showcase.jpg') no-repeat center center;
+    background: #000 url('https://res.cloudinary.com/dygmsgc3i/image/upload/v1634049940/large_024_Installation_view_Joanna_Piotrowska_Room_Kingly_13_Jan_to_18th_Feb_0a71450623.jpg')no-repeat center/100%;
     color: #fff;
     position: relative;
     display: flex;
